@@ -88,6 +88,7 @@ Version 1.11.0+svn:
    * Added bzip2 support for savefiles. (new dependency)
    * Fix OOS when observe scenario 2 in a multiplayer campaign (bug #20217).
    * Synchronize underlying_unit_id in MP campaigns (bug #20227)
+   * Fixed: Compilation with Boost 1.51.0 (Gentoo bug #440742).
 
 Version 1.11.0:
  * Add-ons client:
